# geompm-forked

./: .gitignore  LICENSE  PACKAGING_GUIDE.md  README.md  pyproject.toml
geotaichi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dem/: SceneManager.py  Simulation.py
src/dem/generator/: BrustNeighbor.py
src/dem/neighbor/: BrustSearch.py
src/mpm/: BaseKernel.py  BaseStruct.py  PostPlot.py  Recorder.py  SceneManager.py  Simulation.py  mainMPM.py
src/mpm/boundaries/: BoundaryCore.py  BoundaryStrcut.py
src/mpm/elements/: HexahedronElement8Nodes.py
src/mpm/engines/: EngineKernel.py  ULExplicitEngine.py
src/mpm/generator/: InsertionKernel.py  LoadFromFile.py
src/mpm/materials/infinitesimal_strain/: LinearElastic.py
src/utils/: FreeSurfaceDetection.py
