[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geotaichi"
version = "0.1.0"
authors = [
  { name = "Shi-Yihao, Guo-Ning", email = "zju.multiscale.geomechanics@gmail.com" }
]
description = "A High Performance Multiscale and Multiphysics Simulator"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "taichi==1.6.0",
    "scipy",
    "trimesh",
    "imageio",
    "matplotlib",
    "psutil",
    "pynvml",
    "shapely"
]

[tool.setuptools.packages.find]
where = [".", "src"]

[tool.setuptools.package-data]
geotaichi = ["assets/**/*", "asserts/**/*"]
"src" = ["**/*.py"]
